✨ feat: add Bisq favicon to web interface
- Download official Bisq favicon from bisq.network (PNG and ICO formats)
- Update noVNC index.html with favicon link tags for all browser compatibility
- Copy favicon files to noVNC directory in Dockerfile
- Support multiple icon sizes (16x16, 32x32) and Apple touch icon

Browser tabs and bookmarks now display the official Bisq logo.

--- a/docker/bisq/config/novnc-index.html
+++ b/docker/bisq/config/novnc-index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bisq VNC</title>
+    <!-- Bisq Favicons -->
+    <link rel="icon" type="image/x-icon" href="/bisq-favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/bisq-favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/bisq-favicon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/bisq-favicon.png">
     <style>
         body, html {
             margin: 0;
