🐛 fix: remove window chrome and enable true fullscreen mode
- Enhanced monitor-resize.sh to remove window decorations using undecorated flag
- Position Bisq window to fill entire screen without title bar or borders
- Hide noVNC control bar with show_control_bar=false parameter
- Improved window management with proper state clearing before applying fullscreen

The Bisq interface now takes up the entire VNC viewport without any chrome.

--- a/docker/bisq/config/novnc-index.html
+++ b/docker/bisq/config/novnc-index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <!-- Load noVNC with resize enabled and automatic connection -->
-    <iframe src="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false"></iframe>
+    <!-- Load noVNC with resize enabled, automatic connection, and hidden control bar -->
+    <iframe src="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=false"></iframe>
 </body>
 </html>
