✨ feat: enable noVNC clipboard functionality with control bar
- Enable noVNC control bar to provide clipboard access via UI widget
- Fix autocutsel configuration for proper clipboard synchronization
- Update README with realistic clipboard usage instructions
- Explain browser security limitations for transparent clipboard access

--- a/docker/bisq/config/novnc-index.html
+++ b/docker/bisq/config/novnc-index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <!-- Load noVNC with resize enabled, automatic connection, and hidden control bar -->
-    <iframe src="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=false"></iframe>
+    <!-- Load noVNC with resize enabled, automatic connection, and minimal control bar for clipboard -->
+    <iframe src="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=true"></iframe>
 </body>
 </html>
