🔧 fix: replace iframe with redirect for noVNC Ubuntu 24.04 compatibility
- Ubuntu 24.04 ships with noVNC 1.3.0 which has stricter DOM security
- Iframe approach causes JavaScript error: "Cannot read properties of null"
- Replace iframe with HTTP redirect to vnc.html directly
- Maintains same functionality: autoconnect, resize, control bar

Fixes TypeError in addTouchSpecificHandlers for modern noVNC versions.

--- a/docker/bisq/config/novnc-index.html
+++ b/docker/bisq/config/novnc-index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bisq VNC</title>
+    <meta http-equiv="refresh" content="0;url=/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=true">
+    <title>Bisq VNC - Redirecting...</title>
     <!-- Bisq Favicons -->
     <link rel="icon" type="image/x-icon" href="/bisq-favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/bisq-favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/bisq-favicon.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/bisq-favicon.png">
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
 </head>
 <body>
-    <!-- Load noVNC with resize enabled, automatic connection, and minimal control bar for clipboard -->
-    <iframe src="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=true"></iframe>
+    <p>Redirecting to Bisq VNC interface...</p>
+    <p>If not redirected, <a href="/vnc.html?autoconnect=true&resize=remote&quality=6&compression=2&show_dot=false&view_only=false&show_control_bar=true">click here</a>.</p>
 </body>
 </html>
